# aoc2020

./: .gitignore  CMakeLists.txt  day1.ts  day2.ts  day3.ts  day4.ts  day5.ts  day6.ts  day7.ts  day8.ts  day9.ts
include/: room.h  ship.h
input/: day13.txt
lib/algorithms/: CMakeLists.txt
lib/algorithms/include/: quicksort.h
lib/algorithms/src/: quicksort.c
lib/extensions/: CMakeLists.txt
lib/extensions/include/: char_extensions.h  string_extensions.h
lib/extensions/src/: char_extensions.c  string_extensions.cpp
src/: cube.cpp  day1.c  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day2.c  day3.c  day4.c  day5.c  day6.c  day7.cpp  day8.cpp  day9.cpp  room.cpp
